--- a/css/style.css
+++ b/css/style.css
@@ -255,6 +255,7 @@ header .bg-nav-menu {
 #mapa {
   filter: brightness(0.6);
   transition-duration: 0.6s;
+  padding-top: 10px !important;
 }
 
 #mapa:hover {
