--- a/css/style.css
+++ b/css/style.css
@@ -400,6 +400,19 @@ section>a>img {
   width: 90px;
 }
 
+.alianza:hover {
+  -webkit-box-shadow: 0px 0px 20px 0px yellow;
+  -moz-box-shadow: 0px 0px 20px 0px yellow;
+  box-shadow: 0px 0px 20px 0px yellow;
+  background-color: rgb(123, 255, 0);
+  transition-duration: .3s;
+}
+
+.alianza:hover h4 {
+  color: rgb(0, 119, 255);
+  text-shadow: 1px 1px rgb(255, 255, 255);
+}
+
 /* FIN Alianzas -------------------------------------------------- */
 
 /* nosotros.html --------------------------------------------------*/
