--- a/css/style.css
+++ b/css/style.css
@@ -270,6 +270,14 @@ header .bg-nav-menu {
   min-height: 400px;
 }
 
+#facebook-container {
+  border-radius: 5px 5px 5px 5px;
+  -moz-border-radius: 5px 5px 5px 5px;
+  -webkit-border-radius: 5px 5px 5px 5px;
+  border: 0px solid #000000;
+  background-color: white;
+}
+
 /* END Index.html -------------------------------------------------- */
 
 /* alianzas.html -------------------------------------------------- */
