--- a/css/style.css
+++ b/css/style.css
@@ -436,5 +436,8 @@ section>a>img {
   clip-path: polygon(0 0, 100% 0, 71% 100%, 0% 100%);
   z-index: 0;
 }
+#logo_acerca {
+  height: 300px;
+}
 
 /* FIN nosotros.html -------------------------------------------------- */
