--- a/css/font-size.css
+++ b/css/font-size.css
@@ -25,3 +25,12 @@
         font-size: 1.4rem;
       }
 }
+
+.t1 {font-size: .7rem}
+.t2 {font-size: .8rem}
+.t3 {font-size: .9rem}
+.t4 {font-size: 1.1rem}
+.t5 {font-size: 1.2rem}
+.t6 {font-size: 1.3rem}
+.t7 {font-size: 1.4rem}
+.t8 {font-size: 1.5rem}
