--- a/css/font-size.css
+++ b/css/font-size.css
@@ -34,3 +34,6 @@
 .t6 {font-size: 1.3rem}
 .t7 {font-size: 1.4rem}
 .t8 {font-size: 1.5rem}
+.t9 {font-size: 1.6rem}
+.t10 {font-size: 1.7rem}
+.t11 {font-size: 1.8rem}
