--- a/css/style.css
+++ b/css/style.css
@@ -295,18 +295,8 @@ header .bg-nav-menu {
 
 /* Politica.html -------------------------------------------------- */
 
-#politica {}
+#politica {
 
-.tarjeta4 {
-  -webkit-clip-path: polygon(80% 0, 100% 50%, 80% 100%, 20% 100%, 0% 50%, 20% 0);
-  clip-path: polygon(80% 0, 100% 50%, 80% 100%, 20% 100%, 0% 50%, 20% 0);
-  background-color: #009100;
-  color: rgb(255, 255, 255);
-  position: relative;
-  display: inline-block;
-  z-index: -1;
-  padding: .3em 3em;
-  margin: .5em 0em;
 }
 
 /* FIN Politica.html -------------------------------------------------- */
