--- a/css/style.css
+++ b/css/style.css
@@ -295,9 +295,7 @@ header .bg-nav-menu {
 
 /* Politica.html -------------------------------------------------- */
 
-#politica {
-
-}
+#politica {}
 
 /* FIN Politica.html -------------------------------------------------- */
 
@@ -472,6 +470,18 @@ section>a>img {
   position: absolute;
   width: 100%;
   height: 100%;
+}
+
+.tarjeta4 {
+  -webkit-clip-path: polygon(80% 0, 100% 50%, 80% 100%, 20% 100%, 0% 50%, 20% 0);
+  clip-path: polygon(80% 0, 100% 50%, 80% 100%, 20% 100%, 0% 50%, 20% 0);
+  background-color: #009100;
+  color: rgb(255, 255, 255);
+  position: relative;
+  display: inline-block;
+  z-index: -1;
+  padding: .3em 3em;
+  margin: .5em 0em;
 }
 
 /* FIN nosotros.html -------------------------------------------------- */
