--- a/css/style.css
+++ b/css/style.css
@@ -143,22 +143,18 @@ header .bg-nav-menu {
 /* Footer */
 
 #footer {
-  background-color: #315700;
-  color: white;
+  background-color: white;
+  color: black !important;
   padding-top: 1em;
   padding-bottom: 15px;
 }
 
 .footer {
-  background-color: #008E00;
-}
-
-#footer, .footer i {
-  color: white;
+  background-color: rgb(201, 201, 201);
 }
 
 #footer i:hover {
-  color: #FFEE00;
+  color: rgba(30, 255, 0, 0.719);
   transition-duration: 0.3s;
 }
 
@@ -457,6 +453,7 @@ section>a>img {
   position: absolute;
   width: 100%;
   height: 100%;
+  z-index: -1;
 }
 
 .color2 {
@@ -464,6 +461,7 @@ section>a>img {
   position: absolute;
   width: 100%;
   height: 100%;
+  z-index: -1;
 }
 
 .tarjeta4 {
