--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,38 @@ hr {
   box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.5);
 }
 
+.tarjeta {
+  -webkit-box-shadow: 0px 0px 14px -1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 14px -1px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 14px -1px rgba(0, 0, 0, 0.75);
+  border-radius: 10px 10px 10px 10px;
+  -moz-border-radius: 10px 10px 10px 10px;
+  -webkit-border-radius: 10px 10px 10px 10px;
+  border: 0px solid #000000;
+  background-color: white;
+  padding: 1em 0.3em;
+  margin-bottom: 1em;
+}
+
+.tarjeta2 {
+  border-radius: 15px 15px 15px 15px;
+  -moz-border-radius: 15px 15px 15px 15px;
+  -webkit-border-radius: 15px 15px 15px 15px;
+  border: 3px solid #adadad;
+  background-color: white;
+  transition-duration: .3s;
+  height: 400px;
+}
+
+.tarjeta2:hover {
+  -webkit-box-shadow: 0px 0px 52px -14px rgba(0, 238, 255, 1);
+  -moz-box-shadow: 0px 0px 52px -14px rgba(0, 238, 255, 1);
+  box-shadow: 0px 0px 52px -14px rgba(0, 238, 255, 1);
+  border: 3px solid #cccccc28;
+  background-color: #06E0FA;
+  transition-duration: .3s;
+}
+
 /* NAVBAR */
 
 header li {
@@ -90,7 +122,7 @@ header .bg-nav-menu {
 .bg-index {
   min-height: 100%;
   min-width: 100%;
-  background-image: url(../img/fondo.jpg);
+  background-image: url(../img/index/fondo.jpg);
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -215,7 +247,7 @@ header .bg-nav-menu {
 }
 
 #parallax1 {
-  background-image: url(../img/gastronomia.jpg);
+  background-image: url(../img/index/gastronomia.jpg);
   opacity: .6;
   background-size: auto 150vh;
   background-position: center center;
@@ -242,7 +274,7 @@ header .bg-nav-menu {
 }
 
 #parallax2 {
-  background-image: url(../img/cultura.jpg);
+  background-image: url(../img/index/cultura.jpg);
   opacity: .6;
   background-size: auto 150vh;
   background-position: center center;
@@ -278,73 +310,6 @@ header .bg-nav-menu {
 /* END Index.html -------------------------------------------------- */
 
 /* alianzas.html -------------------------------------------------- */
-
-.bg-alainza {
-  min-height: 50vh;
-  background-image: url(../img/bg1.jpg);
-  background-position: 0%;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-/* alianzas.html -------------------------------------------------- */
-
-.tarjeta {
-  -webkit-box-shadow: 0px 0px 14px -1px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 0px 14px -1px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 0px 14px -1px rgba(0, 0, 0, 0.75);
-  border-radius: 10px 10px 10px 10px;
-  -moz-border-radius: 10px 10px 10px 10px;
-  -webkit-border-radius: 10px 10px 10px 10px;
-  border: 0px solid #000000;
-  background-color: white;
-  padding: 1em 0.3em;
-  margin-bottom: 1em;
-}
-
-.tarjeta2 {
-  border-radius: 15px 15px 15px 15px;
-  -moz-border-radius: 15px 15px 15px 15px;
-  -webkit-border-radius: 15px 15px 15px 15px;
-  border: 3px solid #adadad;
-  background-color: white;
-  transition-duration: .3s;
-  height: 400px;
-}
-
-.tarjeta2:hover {
-  -webkit-box-shadow: 0px 0px 52px -14px rgba(0, 238, 255, 1);
-  -moz-box-shadow: 0px 0px 52px -14px rgba(0, 238, 255, 1);
-  box-shadow: 0px 0px 52px -14px rgba(0, 238, 255, 1);
-  border: 3px solid #cccccc28;
-  background-color: #06E0FA;
-  transition-duration: .3s;
-}
-
-.tarjeta3 {
-  border-radius: 10px 10px 10px 10px;
-  -moz-border-radius: 10px 10px 10px 10px;
-  -webkit-border-radius: 10px 10px 10px 10px;
-  border: 3px solid #adadad;
-  background-color: white;
-  margin: 0.5em;
-  transition-duration: .3s;
-  position: relative;
-}
-
-.tarjeta3 img {
-  margin: 1em 0;
-}
-
-.tarjeta3 p {
-  margin-bottom: 1em;
-}
-
-.carousel-inner img {
-  max-height: 350px;
-}
-
-/* Alianzas.html -------------------------------------------------- */
 
 .alianza {
   border-radius: 10px 10px 10px 10px;
@@ -382,8 +347,10 @@ header .bg-nav-menu {
   color: rgba(255, 236, 2, 1);
 }
 
+
 .au {
-  /* Esta vaina es de los elementos "i" de alianza.html */
+  /* Son los iconos de servicios que ofrece el establecimiento comercial */
+  /* Esta vaina es de los elementos "<i>" de alianza.html */
   background-color: #ffffff;
   border-radius: 10%;
   height: 1.2em;
@@ -521,7 +488,8 @@ section>a>img {
   opacity: 1;
   transition-duration: .5s;
 }
-#fondo_turismo_img{
+
+#fondo_turismo_img {
   position: relative;
   height: 10px;
   opacity: 1;
