--- a/css/style.css
+++ b/css/style.css
@@ -487,8 +487,8 @@ section>a>img:hover{
 
 .img_adaptada {
   object-fit: cover;
-  height: 200px;
-  width: 300px;
+  height: 200px !important;
+  width: 300px !important;
   filter: blur(2px);
   opacity: .7;
   transition-duration: .5s;
