--- a/css/style.css
+++ b/css/style.css
@@ -222,7 +222,7 @@ header .bg-nav-menu {
 
 #biodiversidad {
   margin-top: 5em;
-  background-color: #212020;
+  background-color: white;
   padding-bottom: 2em;
   position: relative;
   padding-top: 5em;
