--- a/css/style.css
+++ b/css/style.css
@@ -66,10 +66,10 @@ hr {
   border-radius: 15px 15px 15px 15px;
   -moz-border-radius: 15px 15px 15px 15px;
   -webkit-border-radius: 15px 15px 15px 15px;
-  border: 3px solid #adadad;
+  border: 1px solid #adadad;
   background-color: white;
   transition-duration: .3s;
-  height: 400px;
+  height: 450px;
 }
 
 .tarjeta2:hover {
@@ -79,6 +79,15 @@ hr {
   border: 3px solid #cccccc28;
   background-color: #06E0FA;
   transition-duration: .3s;
+}
+.tarjeta3 {
+  border-radius: 10px 10px 10px 10px;
+  -moz-border-radius: 10px 10px 10px 10px;
+  -webkit-border-radius: 10px 10px 10px 10px;
+  border: 0px solid #000000;
+  background-color: rgba(255, 255, 255, 0.527);
+  padding: 1em 0.3em;
+  margin-bottom: 1em;
 }
 
 /* NAVBAR */
@@ -216,8 +225,19 @@ header .bg-nav-menu {
 
 /* FIN Generales */
 
-/* Index.html ------------------------------------------------------ */
-
+#img_twitter{
+  display: flex;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  border-radius: 5%;
+}
+#comentarios{
+  background-image: url(/img/index/facebook-box-1334045_640.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 543px;
+}
 /* Biodiversidad index.html */
 
 #biodiversidad {
