--- a/css/style.css
+++ b/css/style.css
@@ -80,12 +80,15 @@ hr {
   background-color: #06E0FA;
   transition-duration: .3s;
 }
+
 .tarjeta3 {
   border-radius: 10px 10px 10px 10px;
   -moz-border-radius: 10px 10px 10px 10px;
   -webkit-border-radius: 10px 10px 10px 10px;
   border: 0px solid #000000;
-  background-color: rgba(255, 255, 255, 0.527);
+  background-color: rgba(80, 116, 177, 0.788);
+  color: white;
+  text-shadow: 3px 3px 10px rgb(0, 0, 0);
   padding: 1em 0.3em;
   margin-bottom: 1em;
 }
@@ -225,19 +228,21 @@ header .bg-nav-menu {
 
 /* FIN Generales */
 
-#img_twitter{
+#img_twitter {
   display: flex;
   object-fit: cover;
   width: 100%;
   height: 100%;
   border-radius: 5%;
 }
-#comentarios{
+
+#comentarios {
   background-image: url(/img/index/facebook-box-1334045_640.png);
   background-repeat: no-repeat;
   background-position: center;
   height: 543px;
 }
+
 /* Biodiversidad index.html */
 
 #biodiversidad {
