--- a/css/style.css
+++ b/css/style.css
@@ -527,3 +527,21 @@ section>a>img:hover {
 }
 
 /* Turismo --------------------------------------------- */
+
+
+
+
+/**AMDMINISTRADOR*/
+/**NOTICIAS*/
+
+.noticias{
+  color: #000 !important;
+  text-align: center;
+}
+
+.myImage{
+  /* max-width: 100px;
+  max-height: 100px; */
+  /* object-fit: cover */
+}
+
