--- a/css/style.css
+++ b/css/style.css
@@ -226,6 +226,10 @@ header .bg-nav-menu {
   margin-right: 0 !important;
 }
 
+.galery_container {
+  padding: 0 15px;
+}
+
 /* FIN Generales */
 
 #img_twitter {
@@ -539,24 +543,28 @@ section>a>img:hover {
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
+
+#info_gastronomy {
+  -webkit-box-shadow: 0px 10px 13px -7px #000000, 0px 0px 15px 2px rgba(0, 0, 0, 0);
+  box-shadow: 0px 10px 13px -7px #000000, 0px 0px 15px 2px rgba(0, 0, 0, 0);
+}
+
 .tarjeta5 {
   background-color: rgba(255, 255, 255, 0.623);
   border-radius: 3px;
 }
 
-
-
 /**AMDMINISTRADOR*/
+
 /**NOTICIAS*/
 
-.noticias{
+.noticias {
   color: #000 !important;
   text-align: center;
 }
 
-.myImage{
+.myImage {
   /* max-width: 100px;
   max-height: 100px; */
   /* object-fit: cover */
 }
-
