--- a/css/style.css
+++ b/css/style.css
@@ -489,28 +489,86 @@ section>a>img:hover {
 
 /* Turismo --------------------------------------------- */
 
-#img_intro_turismo {
-  position: relative;
-  z-index: -1;
-  background: url(../img/bg1.jpg);
+.turismo {
+  min-height: 100%;
+  min-width: 100%;
+  background-image: url(../img/turismo/turismo.jpg);
   background-position: center center;
   background-size: cover;
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 75%, 50% 100%, 0 75%);
-  clip-path: polygon(0 0, 100% 0, 100% 75%, 50% 100%, 0 75%);
-  height: 50vh;
+  background-repeat: repeat-y;
+  /* background-attachment: fixed; */
 }
 
-#main_turismo {
+.tarjeta6 {
+  height: 150px;
+  width: 150px;
+  display: inline-flex !important;
+  align-items: center;
+  justify-content: center;
+  font-size: 1em;
+  vertical-align: middle;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  background-color: green;
+  color: white;
   position: relative;
-  background-color: black;
-  color: #009100;
-  opacity: .8;
-  height: 50vh;
+  padding: .3em 3em;
+  margin: .5em 0em;
+  text-decoration: none !important;
+  transition-duration: .5s;
 }
 
-#contenido_turismo {
-  position: relative;
+.tarjeta6:hover {
   color: black;
+  background-color: greenyellow;
+  text-decoration: none !important;
+  transition-duration: .5s;
+}
+
+#contenido_turismo1 {
+  color: black;
+  min-height: 50vh;
+}
+
+#contenido_turismo2 {
+  color: black;
+  min-height: 50vh;
+}
+
+#contenido_turismo3 {
+  color: black;
+  min-height: 50vh;
+}
+
+#contenido_turismo4 {
+  color: black;
+  min-height: 50vh;
+}
+
+#contenido_turismo5 {
+  color: black;
+  min-height: 50vh;
+}
+
+#contenido_turismo6 {
+  color: black;
+  min-height: 50vh;
+}
+
+#contenido_turismo7 {
+  color: black;
+  min-height: 50vh;
+}
+
+#contenido_turismo8 {
+  color: black;
+  min-height: 50vh;
+}
+
+#contenido_turismo9 {
+  color: black;
+  min-height: 50vh;
 }
 
 .img_adaptada {
