--- a/css/style.css
+++ b/css/style.css
@@ -175,12 +175,13 @@ header .bg-nav-menu {
 
 .flecha-abajo a i {
   text-align: center;
-  position: absolute;
-  bottom: 25px;
+  position: relative;
+  bottom: 55px;
   font-size: 38px;
   color: #fff;
   animation-duration: 2s;
   animation-delay: .3s;
+  z-index: 1;
 }
 
 /* FIN MAIN */
@@ -229,6 +230,15 @@ header .bg-nav-menu {
 
 .galery_container {
   padding: 0 15px;
+}
+
+#emprendimiento {
+  -webkit-box-shadow: 0px 0px 45px 0px rgba(0, 0, 0, 0.6);
+  box-shadow: 0px 0px 45px 0px rgba(0, 0, 0, 0.6);
+}
+
+#video_index {
+  padding-top: 10px !important;
 }
 
 /* FIN Generales */
