Update noticias (news)
Se implementó el módulo de noticias de cara al usuario invitado

Otros... container-fluid en los módulos de admin y manager,

Paginación, búsqueda, carousel, search...

index principal a php

--- a/css/style.css
+++ b/css/style.css
@@ -669,3 +669,15 @@ section>a>img:hover {
   max-height: 100px; */
   /* object-fit: cover */
 }
+
+#lista-noticias{
+  background-color: #e8e8e8;
+}
+
+/*Opaco la imagen*/
+.img-carousel-index{
+  height: 300px !important;
+  background-color: rgba(0,0,0,0.8);
+  filter:brightness(0.4);
+
+}
