--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css?family=K2D");
 @import url("../css/bootstrap.min.css");
 @import url("../css/font-size.css");
-/* @import url("../css/normalize.css"); */
+@import url("../css/normalize.css");
 @import url("../css/animaciones.css");
 @import url("../css/barra-scroll.css");
 /* Generales ------------------------------------------------------ */
